fix spacing issu in target cards container

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -189,6 +189,7 @@ nav{
     @media(min-width: 768px){
       .user-cards{
         flex-direction: row;
+        justify-content: space-evenly;
       }
     }
 
